[tool.poetry]
name = "minimal-example"
version = "1.0.1"
description = ""
authors = ["afuetterer <fuetterh@posteo.de>"]
readme = "README.md"
packages = [{include = "hello_world.py"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
